--- a/Frontend/views/books.html
+++ b/Frontend/views/books.html
@@ -10,6 +10,52 @@
 <body>
 
     <div class="container books">
+
+        <!--MOdal-->
+        <div class="modal" tabindex="-1">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title">Módosítás</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+                <form action="/newBook" method="post">
+
+                  <div class="form-floating mb-3">
+                      <input type="text" class="form-control" name="title" placeholder="Cím" id="title">
+                      <label for="title">Cím</label>
+                  </div>
+      
+                  <div class="form-floating mb-3">
+                      <input type="date" class="form-control" name="kiadas" placeholder="2024.10.16" id="release">
+                      <label for="name">Kiadás dátuma</label>
+                  </div>
+      
+                  <div class="form-floating mb-3">
+                      <input type="text" class="form-control" name="ISBN" placeholder="999-9-99-999999-9" id="ISBN">
+                      <label for="name">ISBN szám</label>
+                  </div>
+      
+                  <div class="form-floating mb-3">
+                      <select class="form-select" name="authorID" aria-label="">
+                          <!--Options-->
+                      </select>
+                      <label for="authorID">Szerzők</label>
+                  </div>
+      
+              </form>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary" onclick="updateBook()">Módosítások mentése</button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!--MOdal vége-->
+
+
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
               <a class="navbar-brand" href="../index.html">Home</a>
